# Dataarm

./: .gitattributes  .gitignore  .prettierignore  .typos.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  PATENTS.md  README.md  RELEASE_PROTOCOL.md  deny.toml  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.eslint.json  tsconfig.node.json  tsconfig.tests.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.codex/: AGENTS_EXTRA.md  AGENTS_TAURI211.md  htmlcut-and-ffhn-defects.txt
.github/: dependabot.yml
docs/: README.md  architecture.md  developer-guide.md  hygiene.md  installing-macos.md  release-protocol.md  release-publishing.md
scripts/: README.md  build-release-checksums.mjs  clean-hygiene.mjs  collect-github-packaging-artifacts.mjs  fetch-release-sidecars.mjs  prepare-first-platform-real-binaries.mjs  prepare-real-sidecars.mjs  publish-github-release.mjs  record-release-sidecar-checksums.mjs  report-hygiene.mjs  run-miri.mjs  run-playwright-tests.mjs  run-vite-browser-workbench.mjs  run-vitest-browser-workbench.mjs  sync-app-version.mjs  sync-local-sidecars.mjs  verify-app-version.mjs  verify-bundle-manifest.mjs  verify-dmg-packaging.mjs  verify-frontend-coverage.mjs  verify-github-packaging.mjs  verify-github-release.mjs  verify-hydrated-bundle.mjs  verify-hygiene.mjs  verify-packaged-execution-proof.mjs  verify-project-status.mjs  verify-quality-gates.mjs  verify-real-binary-activation.mjs  verify-release-publishing.mjs  verify-release-readiness.mjs  verify-runtime-dependencies.mjs  (+2 more)
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/binaries/: README.md  ffhn-aarch64-apple-darwin
src-tauri/binaries/dev-fixtures/: ffhn-fixture.py  htmlcut-fixture.py
src-tauri/capabilities/: default.json
src-tauri/examples/: backend_release_validation.rs  browser_workbench_bridge.rs
src-tauri/src/: commands.rs  logic.rs  main.rs  models.rs
src-tauri/src/logic/: mod.rs  notifications.rs  os.rs  runtime_artifacts.rs  targets.rs  watch_profile.rs  workbench_fixtures.rs  workspace.rs
src-tauri/src/logic/notifications/: policy.rs  state.rs  tests.rs
src-tauri/src/logic/targets/: drafts.rs  storage.rs  tests.rs
src-tauri/src/logic/workspace/: demo.rs  inventory.rs  recents.rs  tests.rs
(+109 files in other folders)
